--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,71 +1,31 @@
 ---
 title: Introduction
-description: "Welcome to the home of your new documentation"
+description: "Welcome to the BrainLink Documentation site"
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.png"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.png"
-  alt="Hero Dark"
-/>
+## What's BrainLink
 
-## Setting up
+BrainLink is a global AI account with access to the all models available in the market. You can connect your BrainLink account to any AI application with one-click and pay exactly
+for what you consume.
 
-The first step to world-class documentation is setting up your editing environments.
+In other words, we are the first AI utility provider. Just like electricity, where you hire a provider and connect all your appliances to it, you can connect
+all your AI applications to BrainLink and have a single source to pay and track your consumption.
+
+You can see and control your global AI spending per application on the BrainLink dashboard.
 
 <CardGroup cols={2}>
   <Card
-    title="Edit Your Docs"
+    title="Get an account"
     icon="pen-to-square"
     href="https://mintlify.com/docs/quickstart"
   >
-    Get your docs set up locally for easy development
+    Get a BrainLink account today and enjoy all the benefits
   </Card>
   <Card
-    title="Preview Changes"
+    title="Try out our demo"
     icon="image"
     href="https://mintlify.com/docs/development"
   >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
-
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
-
-<CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands
-  </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/content/components/accordions"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
+    Try the BrainLink demo to learn how simple it is to connect your BrainLink account to any AI application
   </Card>
 </CardGroup>
