--- a/introduction.mdx
+++ b/introduction.mdx
@@ -17,14 +17,14 @@ You can see and control your global AI spending per application on the BrainLink
   <Card
     title="Get an account"
     icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
+    href="https://www.brainlink.dev/dashboard"
   >
     Get a BrainLink account today and enjoy all the benefits
   </Card>
   <Card
     title="Try out our demo"
     icon="image"
-    href="https://mintlify.com/docs/development"
+    href="https://demo.brainlink.dev"
   >
     Try the BrainLink demo to learn how simple it is to connect your BrainLink account to any AI application
   </Card>
