--- a/developers/quickstart.mdx
+++ b/developers/quickstart.mdx
@@ -15,13 +15,13 @@ practise generates a huge amount of friction to your application, goes against m
 
 <AccordionGroup>
   <Accordion icon="github" title="Register your application with BrainLink">
-    Create your own BrainLink account by going to the [dashboard](https://www.brainlink.dev/dashboard).
-    Click on the top right menu icon and click on "Register application" under the developer section.
-    Fill the form with the data with your application data. If you have not yet deployed your application, you can use `http://localhost:3000` on the URLs to test
+    1. Create your own BrainLink account by going to the [dashboard](https://www.brainlink.dev/dashboard).
+    1. Click on the top right menu icon and click on "Register application" under the developer section.
+    1. Fill the form with the data with your application data. If you have not yet deployed your application, you can use `http://localhost:3000` on the URLs to test
     your integration locally. Otherwise, provide the actual application URL.
     For the callback URL, if you don't plan to redirect the user to a specific page after connecting their account, just provide the base URL of the application.
     In most of the cases, it matches the application website URL.
-    Copy the application client ID that is shown after the registration.
+    1. Copy the application client ID that is shown after the registration.
   </Accordion>
   <Accordion icon="rectangle-terminal" title="For React based frameworks like Next.js">
     If you are using React based frameworks like Next.js, you can directly import the BrainLink button as explained on the [main website](https://www.brainlink.dev/developers).
