Add page regarding Sign In
Signed-off-by: Miguel A. Cabrera Minagorri <devgorri@gmail.com>

--- a/developers/quickstart.mdx
+++ b/developers/quickstart.mdx
@@ -9,7 +9,10 @@ Integrating BrainLink in your application allows your users to pay for their own
 to your application with a single click.
 
 Traditionally, most AI applications have requested users to copy/paste their API keys from other providers, however, that
-practise generates a huge amount of friction, goes against most AI providers' terms of service and creates important security issues.
+generates a huge amount of friction, goes against most AI providers' terms of service and creates important security issues.
+Using BrainLink, users don't need to know what's an API key, for them, it is just a user friendly account that they can easily use with your application (and many others).
+
+> NOTE: BrainLink is NOT a key aggregator. Users do NOT have to setup BrainLink with their keys. They don't even need to know what's an API key to use your app if you integrate BrainLink.
 
 ### Integrating BrainLink
 
