--- a/developers/oauth.mdx
+++ b/developers/oauth.mdx
@@ -5,9 +5,9 @@ description: 'Learn how to use OAuth in your AI application to allow users to co
 
 # BrainLink OAuth
 
-At BrainLink we use a secure OAuth workflow to provider your application with user's access and refresh tokens that you can use to run inference via our model proxy.
+At BrainLink we use a secure OAuth workflow to provide your application with users' access and refresh tokens which you can use to run inference on their behalf via our model proxy.
 
-BrainLink supports 300+ models through an OpenAI compatible API. This means the changes required in your code are minimal.
+BrainLink supports 300+ models through an OpenAI-compatible API, which means your code needs minimal changes.
 
 OpenAI, Anthropic, Gemini, and other AI providers do not support a "Sign In with OpenAI" like functionality. Thus, BrainLink creates a layer on top of
 them to help applications get more users by reducing the onboarding friction.
