--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,31 +1,49 @@
 ---
-title: Introduction
+title: Introduction - BrainLink AI app store
 description: "Welcome to the BrainLink Documentation site"
 ---
 
 ## What's BrainLink
 
-BrainLink is a global AI account with access to the all models available in the market. You can connect your BrainLink account to any AI application with one-click and pay exactly
-for what you consume.
+BrainLink is an AI app store where you can find applications, agents, and tools.
 
-In other words, we are the first AI utility provider. Just like electricity, where you hire a provider and connect all your appliances to it, you can connect
-all your AI applications to BrainLink and have a single source to pay and track your consumption.
+Every user has a portable account - a brain - that can be linked to any app with a single click. These brains automatically provide the apps with user-paid inference, identity, monetization, memory, etc.
+As a user, you can decide which parts of your brain to connect to each app as well as track data and spending across apps.
 
-You can see and control your global AI spending per application on the BrainLink dashboard.
+AI apps have high variable inference costs, which makes it challenging for developers, especially indie developers, to publish free or inexpensive apps.
+Implementing monthly subscriptions adds high friction and the Bring Your Own Key (BYOK) approach has security issues, limits the development flexibility, and is not user friendly.
+
+At BrainLink, we believe AI should be like electricity. When you get a new app you just plug your brain and pay for the computation you consume, while the app can
+monetize by adding some markup to your consumption or charging you per task completed or executed.
+**Our mission is to make this process a single click for users and trivial to implement for developers.**
 
 <CardGroup cols={2}>
+  <Card
+    title="BrainLink AI store"
+    icon="image"
+    href="https://www.brainlink.dev/store"
+  >
+    Browse applications in the BrainLink AI store
+  </Card>
   <Card
     title="Get an account"
     icon="pen-to-square"
     href="https://www.brainlink.dev/dashboard"
   >
-    Get a BrainLink account today and enjoy all the benefits
+    Create your Brain to enjoy all the benefits
   </Card>
   <Card
     title="Try out our demo"
     icon="image"
     href="https://demo.brainlink.dev"
   >
-    Try the BrainLink demo to learn how simple it is to connect your BrainLink account to any AI application
+    Try the BrainLink demo to learn how simple it is to connect your Brain to an app
+  </Card>
+  <Card
+    title="Integrate BrainLink in your app"
+    icon="pen-to-square"
+    href="/developers/quickstart"
+  >
+    Integrate BrainLink and list your app in the BrainLink AI store
   </Card>
 </CardGroup>
