--- a/developers/quickstart.mdx
+++ b/developers/quickstart.mdx
@@ -35,7 +35,7 @@ We are devs building for fellow devs.
     // Use the button on your app
     <BrainLinkButton appClientId="your-brainlink-app-client-id" />
     ...
-    // Get the user access token to run inference (see next below)
+    // Get the user access token to run inference (see next section)
     const userAccessToken = await BrainLink.getUserToken();
     ```
 
